hphp/test/zend/bad/ext/standard/tests/general_functions/getopt_003.php
<?php
	var_dump(getopt("2a:vcd1", array("another:", 12, 0, 1, "v")));
?>